Fix extra spacing on the top of navbar (Helpful Material)

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,6 +16,7 @@
 }
 
 .navbar {
+  top: 0;
   position: fixed;
   width: 100vw;
   z-index: 9999;
